Added support for forced delays between C-APDU and R-APDU for testing purposes

--- a/sample-edna.conf
+++ b/sample-edna.conf
@@ -36,4 +36,12 @@ emulation:
 
 	# Specify the smart card reader name to use for the emulation
 	reader = "SpringCard NFC'Roll (00000000) 00 00";
+	
+	# Specify the delay in milliseconds between receiving C-APDU
+	# and sending R-APDU (for testing purposes only!)
+	cmd_delay = 0;
+	
+	# Set to true to only delay successfull commands (with a status
+	# word of 0x9000)
+	delay_success_only = true;
 };
